@@ -1,6 +1,5 @@
 import java.util.*;
 import java.util.stream.Collectors;
-
 public class Main {
     private static final Scanner scanner = new Scanner(System.in);
     private static boolean running = true;
@@ -9,9 +8,6 @@ public class Main {
     private static String studentSubjectsFilePath = null;
     private static List<Student> students = new ArrayList<>();
     private static List<Specialty> specialties = new ArrayList<>();
-
-    private static List<StudentSubject> studentSubjects = new ArrayList<>();
-
     public static void main(String[] args) {
         while (running) {
             printCommands();
@@ -20,7 +16,6 @@ public class Main {
             handleCommands(input);
         }
     }
-
     private static void printCommands() {
         System.out.println("\n--- Меню за Управление на Студенти ---");
         System.out.println("1. Отвори файл (Open file)");
@@ -39,9 +34,9 @@ public class Main {
         System.out.println("14. Извади протокол за предмет (protocol)");
         System.out.println("15. Извади академична справка за уценката на студент (report)");
         System.out.println("16. Помощ");
-        System.out.println("17. Изход");
+        System.out.println("17. Бързо отваряне (за тестване)");
+        System.out.println("18. Изход");
     }
-
     private static void handleCommands(String command) {
         switch (command) {
             case "1": openFile(); break;
@@ -60,8 +55,9 @@ public class Main {
             case "14": printProtocol(); break;
             case "15": printReport(); break;
             case "16": showHelp(); break;
-            case "17": exitApp(); break;
-            default: System.out.println("Невалидна команда. Избери число от 1–12.");
+            case "17": quickOpen(); break;
+            case "18": exitApp(); break;
+            default: System.out.println("Невалидна команда. Избери число от 1–18.");
         }
     }
     private static void enrollStudent() {
@@ -79,241 +75,111 @@ public class Main {
             System.out.println("Невалиден номер на група.");
             return;
         }
+
         System.out.print("Въведи име на студента: ");
         String name = scanner.nextLine().trim();
 
-        Specialty foundSpecialty = specialties.stream()
-                .filter(s -> s.getName().equalsIgnoreCase(programName))
-                .findFirst()
-                .orElse(null);
-
-        if (foundSpecialty == null) {
-            System.out.println("Специалност с име \"" + programName + "\" не е намерена.");
-            return;
+        try {
+            Student newStudent = Student.enroll(name, fn, programName, group, specialties);
+            students.add(newStudent);
+            System.out.println(
+                    "Успешно записан студент " + name +
+                            " в 1 курс на специалност " + programName +
+                            ", група " + group +
+                            ", ФН: " + fn
+            );
+        } catch (RuntimeException e) {
+            System.out.println(e.getMessage());
         }
-
-        Student newStudent = new Student();
-        newStudent.setId(java.util.UUID.randomUUID());
-        newStudent.setName(name);
-        newStudent.setFacultyNumber(fn);
-        newStudent.setSpecialty(foundSpecialty);
-        newStudent.setCourse(1);
-        newStudent.setGroup(group);
-        newStudent.setStatus(StudentStatus.ENROLLED);
-        newStudent.setAverageGrade(0.0);
-
-        students.add(newStudent);
-        System.out.printf("Успешно записан студент %s в 1 курс на специалност %s, група %d, ФН: %s%n",
-                name, programName, group, fn);
     }
     private static void changeStudent() {
         System.out.print("Факултетен номер на студента: ");
         String fn = scanner.nextLine().trim();
 
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equalsIgnoreCase(fn))
-                .findFirst()
-                .orElse(null);
-
-        if (student == null) {
-            System.out.println("Студент с факултетен номер " + fn + " не е намерен.");
-            return;
-        }
-
-        if (student.getStatus() == StudentStatus.SUSPENDED) {
-            System.out.println("Операцията не е позволена. Студентът е със статус 'прекъснал'.");
-            return;
-        }
-
-        System.out.print("Опция за промяна (specialty, group, year): ");
-        String option = scanner.nextLine().trim().toLowerCase();
-
-        System.out.print("Нова стойност: ");
-        String value = scanner.nextLine().trim();
-
-        switch (option) {
-            case "group":
-                try {
-                    int newGroup = Integer.parseInt(value);
-                    student.setGroup(newGroup);
-                    System.out.println("Студентът е прехвърлен в група " + newGroup);
-                } catch (NumberFormatException e) {
-                    System.out.println("Невалиден номер на група.");
-                }
-                break;
-
-            case "year":
-                advance(Integer.parseInt(value), student);
-                break;
-
-            case "specialty":
-                Specialty newSpecialty = specialties.stream()
-                        .filter(s -> s.getName().equalsIgnoreCase(value))
-                        .findFirst()
-                        .orElse(null);
-
-                if (newSpecialty == null) {
-                    System.out.println("Специалност с име \"" + value + "\" не е намерена.");
-                    return;
-                }
-
-                int studentYear = student.getCourse();
-
-                List<Subject> requiredSubjects = newSpecialty.getCourses().stream()
-                        .filter(s -> s.isMandatory() &&
-                                s.getAvailableYears().stream().anyMatch(y -> y < studentYear))
-                        .toList();
-
-                boolean isFailingRequiredClass = requiredSubjects.stream()
-                        .anyMatch(subject -> studentSubjects.stream()
-                                .anyMatch(ss ->
-                                        ss.getStudent().equals(student) &&
-                                                ss.getSubject().equals(subject) &&
-                                                ss.getGrade() < 3.0));
-
-                if (!isFailingRequiredClass) {
-                    student.setSpecialty(newSpecialty);
-                    System.out.println("Студентът е прехвърлен в специалност " + newSpecialty.getName());
-                } else {
-                    System.out.println("Прехвърляне не е възможно. Студентът няма положени всички задължителни предмети от минали курсове на новата специалност.");
-                }
-                break;
-
-            default:
-                System.out.println("Невалидна опция. Избери една от следните: program, group, year.");
-        }
-    }
-    private static void advance(int targetYear, Student student){
-        try {
-            int currentYear = student.getCourse();
-
-            if (targetYear != currentYear + 1) {
-                System.out.println("Прехвърляне е разрешено само към следващ курс.");
-                return;
-            }
-
-            long failedMandatoryCourses = studentSubjects.stream()
-                    .filter(ss -> ss.getStudent().equals(student))
-                    .filter(ss -> ss.getSubject().isMandatory())
-                    .filter(ss -> ss.getSubject().getAvailableYears().stream().anyMatch(y -> y < targetYear))
-                    .filter(ss -> ss.getGrade() < 3.0)
-                    .count();
-
-            if (failedMandatoryCourses <= 2) {
-                student.setCourse(targetYear);
-                System.out.println("Студентът е прехвърлен в курс " + targetYear);
-            } else {
-                System.out.println("Прехвърляне не е възможно. Студентът има " + failedMandatoryCourses + " неположени задължителни предмета.");
-            }
-        } catch (Exception e) {
-            System.out.println("Невалиден курс.");
-        }
-    }
-    private static void graduateStudent(){
-        System.out.print("Факултетен номер: ");
-        String fn = scanner.nextLine().trim();
-
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equals(fn))
-                .findFirst()
-                .orElse(null);
+        Student student = Student.findByFacultyNumber(students, fn);
 
         if (student == null) {
             System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
 
-        List<StudentSubject> enrolledSubjects = studentSubjects.stream()
-                .filter(ss -> ss.getStudent().equals(student))
-                .toList();
+        System.out.print("Опция за промяна (specialty, group, year): ");
+        String option = scanner.nextLine().trim();
 
-        boolean allPassed = enrolledSubjects.stream()
-                .allMatch(ss -> ss.getGrade() >= 3.0);
+        System.out.print("Нова стойност: ");
+        String value = scanner.nextLine().trim();
 
-        if (!allPassed) {
-            System.out.println("Студентът не е положил успешно всички изпити.");
+        try {
+            student.applyChange(option, value, specialties);
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
+        }
+    }
+    private static void graduateStudent() {
+        System.out.print("Факултетен номер: ");
+        String fn = scanner.nextLine().trim();
+
+        Student student = Student.findByFacultyNumber(students, fn);
+
+        if (student == null) {
+            System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
 
-        student.setStatus(StudentStatus.GRADUATED);
-        System.out.println("Студентът е успешно отбелязан като завършил.");
+        try {
+            student.graduate();
+            System.out.println("Студентът е успешно отбелязан като завършил.");
+        } catch (RuntimeException e) {
+            System.out.println(e.getMessage());
+        }
     }
     private static void interruptStudent() {
         System.out.print("Факултетен номер: ");
         String fn = scanner.nextLine().trim();
 
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equals(fn))
-                .findFirst()
-                .orElse(null);
+        Student student = Student.findByFacultyNumber(students, fn);
 
         if (student == null) {
             System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
 
-        if(student.getStatus().equals(StudentStatus.SUSPENDED)){
-            System.out.println("Студентът вече е отбелязан като прекъснал.");
-            return;
+        try {
+            student.interrupt();
+            System.out.println("Студентът е успешно отбелязан като прекъснал.");
+        } catch (RuntimeException e) {
+            System.out.println(e.getMessage());
         }
-
-        if(student.getStatus().equals(StudentStatus.GRADUATED)){
-            System.out.println("Този студент вече е завършил.");
-            return;
-        }
-
-        student.setStatus(StudentStatus.SUSPENDED);
-        System.out.println("Студентът е успешно отбелязан като прекъснал.");
     }
-    private static void resumeStudent(){
+    private static void resumeStudent() {
         System.out.print("Факултетен номер: ");
         String fn = scanner.nextLine().trim();
 
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equals(fn))
-                .findFirst()
-                .orElse(null);
+        Student student = Student.findByFacultyNumber(students, fn);
 
         if (student == null) {
             System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
-
-        if(student.getStatus().equals(StudentStatus.ENROLLED)){
-            System.out.println("Студентът вече е отбелязан като записан.");
-            return;
+        try {
+            student.resume();
+            System.out.println("Студентът е успешно отбелязан като записан.");
+        } catch (RuntimeException e) {
+            System.out.println(e.getMessage());
         }
-
-        if(student.getStatus().equals(StudentStatus.GRADUATED)){
-            System.out.println("Този студент вече е завършил.");
-            return;
-        }
-
-        student.setStatus(StudentStatus.ENROLLED);
-        System.out.println("Студентът е успешно отбелязан като записан.");
     }
     private static void displayStudent() {
         System.out.print("Факултетен номер: ");
         String fn = scanner.nextLine().trim();
 
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equals(fn))
-                .findFirst()
-                .orElse(null);
+        Student student = Student.findByFacultyNumber(students, fn);
 
         if (student == null) {
             System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
-            System.out.printf("- Име: %s | Факултетен номер: %s | Специалност: %s | Курс: %d | Група: %d | Статус: %s | Среден успех: %.2f%n",
-                    student.getName(),
-                    student.getFacultyNumber(),
-                    (student.getSpecialty() != null ? student.getSpecialty().getName() : "Неизвестна"),
-                    student.getCourse(),
-                    student.getGroup(),
-                    student.getStatus(),
-                    student.getAverageGrade()
-            );
+
+        student.displayInfo();
     }
     private static void displayStudents() {
         if (students.isEmpty()) {
@@ -337,305 +203,140 @@ public class Main {
         System.out.print("Факултетен номер на студента: ");
         String fn = scanner.nextLine().trim();
 
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equalsIgnoreCase(fn))
-                .findFirst()
-                .orElse(null);
+        Student student = Student.findByFacultyNumber(students, fn);
 
         if (student == null) {
-            System.out.println("Студент с факултетен номер " + fn + " не е намерен.");
+            System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
-        advance(student.getCourse()+1,student);
+        try {
+            student.advanceToNextYear();
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
+        }
     }
     private static void enrollStudentInSubject() {
         System.out.print("Факултетен номер: ");
         String fn = scanner.nextLine().trim();
 
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equals(fn))
-                .findFirst()
-                .orElse(null);
+        Student student = Student.findByFacultyNumber(students, fn);
 
         if (student == null) {
             System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
-
-        if (student.getStatus() == StudentStatus.SUSPENDED) {
-            System.out.println("Студентът е с прекъснато обучение и не може да записва дисциплини.");
-            return;
-        }
-
-        if (student.getSpecialty() == null) {
-            System.out.println("Студентът няма зададена специалност.");
-            return;
-        }
         System.out.print("Име на курс за прибавяне: ");
-        String courseName = scanner.nextLine().trim();
+        String subjectName = scanner.nextLine().trim();
 
-        Subject subject = student.getSpecialty().getCourses().stream()
-                .filter(s -> s.getName().equalsIgnoreCase(courseName))
-                .findFirst()
-                .orElse(null);
+        Subject subject = student.getSpecialty().findSubjectByName(subjectName);
 
         if (subject == null) {
             System.out.println("Дисциплината не е част от специалността на студента.");
             return;
         }
-
-        if (!subject.getAvailableYears().contains(student.getCourse())) {
-            System.out.println("Дисциплината не се предлага за курс " + student.getCourse() + ".");
-            return;
+        StudentSubject studentSubject = new StudentSubject(student, subject, -1);
+        try {
+            student.enrollInSubject(studentSubject);
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
         }
-
-        boolean alreadyEnrolled = studentSubjects.stream()
-                .anyMatch(ss -> ss.getStudent().equals(student) && ss.getSubject().equals(subject));
-
-        if (alreadyEnrolled) {
-            System.out.println("Студентът вече е записан в тази дисциплина.");
-            return;
-        }
-
-        StudentSubject _studentSubject = new StudentSubject(student, subject, -1);
-        studentSubjects.add(_studentSubject);
-        student.enrollInSubject(_studentSubject);
-        System.out.println("Успешно записване на дисциплината: " + subject.getName());
     }
-    private static void addGrade(){
+    private static void addGrade() {
         System.out.print("Факултетен номер: ");
         String fn = scanner.nextLine().trim();
 
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equals(fn))
-                .findFirst()
-                .orElse(null);
-
+        Student student = Student.findByFacultyNumber(students, fn);
         if (student == null) {
             System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
-        if (student.getStatus() == StudentStatus.SUSPENDED) {
-            System.out.println("Студентът е прекъснал и не може да се явява на изпити.");
-            return;
-        }
-
-        System.out.print("Оценка: ");
-        String gradeStr = scanner.nextLine().trim();
-        float grade;
-        try {
-            grade = Float.parseFloat(gradeStr);
-            if (grade < 2.0 || grade > 6.0) {
-                System.out.println("Оценката трябва да е между 2.00 и 6.00.");
-                return;
-            }
-        } catch (NumberFormatException e) {
-            System.out.println("Невалидна стойност за оценка.");
-            return;
-        }
-
         System.out.print("Име на курс: ");
         String courseName = scanner.nextLine().trim();
 
-        StudentSubject enrollment = studentSubjects.stream()
-                .filter(ss -> ss.getStudent().equals(student) &&
-                        ss.getSubject().getName().equalsIgnoreCase(courseName))
-                .findFirst()
-                .orElse(null);
+        StudentSubject enrollment = student.findEnrollmentBySubjectName(courseName);
 
         if (enrollment == null) {
             System.out.println("Студентът не е записан в дисциплината \"" + courseName + "\".");
             return;
         }
 
-        enrollment.setGrade(grade);
-       student.recalculateAverage();
-        System.out.println("Оценката е добавена успешно: " + courseName + " - " + grade);
+        System.out.print("Оценка: ");
+        try {
+            float grade = Float.parseFloat(scanner.nextLine().trim());
+            enrollment.assignGrade(grade);
+            System.out.println("Оценката е добавена успешно: " + courseName + " - " + grade);
+        } catch (NumberFormatException e) {
+            System.out.println("Невалидна стойност за оценка.");
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
+        }
     }
     private static void printProtocol() {
         System.out.print("Име на дисциплина: ");
         String courseName = scanner.nextLine().trim();
 
-        List<StudentSubject> enrolledInCourse = studentSubjects.stream()
-                .filter(ss -> ss.getSubject().getName().equalsIgnoreCase(courseName))
+        List<Subject> allSubjects = specialties.stream()
+                .flatMap(specialty -> specialty.getCourses().stream())
                 .toList();
-
-        if (enrolledInCourse.isEmpty()) {
-            System.out.println("Няма записани студенти в дисциплината \"" + courseName + "\".");
+        Subject subject = Subject.findByName(allSubjects, courseName);
+        if (subject == null) {
+            System.out.println("Не е намерена дисциплина с име: " + courseName);
             return;
         }
-
-        Map<String, Map<Integer, List<StudentSubject>>> grouped =
-                enrolledInCourse.stream()
-                        .collect(Collectors.groupingBy(
-                                ss -> ss.getStudent().getSpecialty().getName(),
-                                Collectors.groupingBy(ss -> ss.getStudent().getCourse())
-                        ));
-
-        System.out.print("\n--- Протокол за дисциплина ---");
-        for (String specialty : grouped.keySet()) {
-            Map<Integer, List<StudentSubject>> byYear = grouped.get(specialty);
-            for (Integer year : byYear.keySet()) {
-                List<StudentSubject> list = byYear.get(year).stream()
-                        .sorted(Comparator.comparing(ss -> ss.getStudent().getFacultyNumber()))
-                        .toList();
-
-
-
-                for (StudentSubject ss : list) {
-                    Student s = ss.getStudent();
-                    String gradeStr = ss.getGrade() > 0 ? String.format("%.2f", ss.getGrade()) : "Няма оценка";
-                    System.out.printf("ФН: %s | Име: %s | Група: %d | Оценка: %s%n",
-                            s.getFacultyNumber(), s.getName(), s.getGroup(), gradeStr);
-                }
-            }
-        }
+        subject.printProtocol(students);
     }
     private static void printReport() {
         System.out.print("Факултетен номер: ");
         String fn = scanner.nextLine().trim();
-
-        Student student = students.stream()
-                .filter(s -> s.getFacultyNumber().equals(fn))
-                .findFirst()
-                .orElse(null);
-
+        Student student = Student.findByFacultyNumber(students, fn);
         if (student == null) {
             System.out.println("Студент с този факултетен номер не е намерен.");
             return;
         }
-
-        List<StudentSubject> records = studentSubjects.stream()
-                .filter(ss -> ss.getStudent().equals(student))
-                .toList();
-
-        if (records.isEmpty()) {
-            System.out.println("Няма записани дисциплини за този студент.");
-            return;
-        }
-
-        List<StudentSubject> passed = new ArrayList<>();
-        List<StudentSubject> missing = new ArrayList<>();
-
-        for (StudentSubject ss : records) {
-            if (ss.getGrade() >= 3.0) {
-                passed.add(ss);
-            } else {
-                missing.add(ss);
-            }
-        }
-
-        System.out.println("\n--- Академична справка за " + student.getName() + " (ФН: " + fn + ") ---");
-
-        if (!passed.isEmpty()) {
-            System.out.println("\n Взети изпити:");
-            for (StudentSubject ss : passed) {
-                System.out.printf("• %s - %.2f%n", ss.getSubject().getName(), ss.getGrade());
-            }
-        }
-
-        if (!missing.isEmpty()) {
-            System.out.println("\n Невзети:");
-            for (StudentSubject ss : missing) {
-                System.out.printf("• %s%n", ss.getSubject().getName());
-            }
-        }
-        System.out.printf("%n Среден успех: %.2f%n", student.getAverageGrade());
+        student.printAcademicReport();
     }
     private static void openFile() {
         System.out.print("Път на файл с специалности: ");
         specialtiesFilePath = scanner.nextLine().trim();
-        List<Specialty> loaded = JsonDeserializeHelper.loadSpecialtiesFromFile(specialtiesFilePath);
-        if (loaded == null) {
-            System.out.println("Неуспешно зареждане на специалности.");
-        } else {
-            specialties = loaded;
-            System.out.println("Успешно заредени " + specialties.size() + " специалности.");
-        }
+        specialties = Specialty.loadFromUserInput(specialtiesFilePath);
         System.out.print("Път на файл със студенти: ");
         studentsFilePath = scanner.nextLine().trim();
-        List<Student> loadedStudents = JsonDeserializeHelper.loadStudentsFromFile(studentsFilePath, specialties);
-
-        if (loadedStudents == null) {
-            System.out.println("Неуспешно зареждане на студенти.");
-        } else {
-            students = loadedStudents;
-            System.out.println("Успешно заредени " + students.size() + " студенти.");
-        }
+        students = Student.loadFromUserInput(studentsFilePath, specialties);
         System.out.print("Път на файл със студентски предмети: ");
         studentSubjectsFilePath = scanner.nextLine().trim();
-        studentSubjects = JsonDeserializeHelper.loadStudentSubjectsFromFile(
+        StudentSubject.loadFromUserInput(
                 studentSubjectsFilePath, students, specialties
         );
-        System.out.println("Успешно заредени студентски предмета: " + (studentSubjects != null ? studentSubjects.size() : 0));
-
-        if (studentSubjects != null) {
-            for (Student student : students) {
-                student.recalculateAverage();
-            }
-        }
     }
-    private static void displaySpecialties(){
-        if(specialties.isEmpty()){
-            System.out.println("Няма заредени специалности.");
-            return;
-        }
-        System.out.println("Списък на специалностите:");
-        for (Specialty sp : specialties) {
-            System.out.println("- " + sp.getName());
-            for (Subject subject : sp.getCourses()) {
-                System.out.printf("  * %s (Задължителен: %b, Възможни курсове: %s)%n",
-                        subject.getName(), subject.isMandatory(), subject.getAvailableYears());
-            }
-        }
+    private static void quickOpen() {
+        specialtiesFilePath = "data/specialties.json";
+        studentsFilePath = "data/students.json";
+        studentSubjectsFilePath = "data/studentSubjects.json";
+
+        specialties = Specialty.loadFromUserInput(specialtiesFilePath);
+        students = Student.loadFromUserInput(studentsFilePath, specialties);
+        StudentSubject.loadFromUserInput(studentSubjectsFilePath, students, specialties);
+
+        System.out.println("Данните са заредени от preset файлове:");
+        System.out.println(" - Специалности: " + specialtiesFilePath);
+        System.out.println(" - Студенти: " + studentsFilePath);
+        System.out.println(" - Студентски предмети: " + studentSubjectsFilePath);
     }
     private static void saveFile() {
         if (specialtiesFilePath == null || studentsFilePath == null || studentSubjectsFilePath == null) {
             System.out.println("Не са намерени заредени файлове. Моля използвайте 'Запази като' за запазване в нова директория.");
             return;
         }
-
-        // Convert to DTOs before saving
-        List<SpecialtyDTO> specialtyDTOs = specialties.stream()
-                .map(specialty -> {
-                    SpecialtyDTO dto = new SpecialtyDTO();
-                    dto.id = specialty.getId().toString();
-                    dto.name = specialty.getName();
-                    dto.courses = specialty.getCourses();
-                    return dto;
-                }).toList();
-
-        List<StudentDTO> studentDTOs = students.stream()
-                .map(student -> {
-                    StudentDTO dto = new StudentDTO();
-                    dto.id = student.getId().toString();
-                    dto.name = student.getName();
-                    dto.facultyNumber = student.getFacultyNumber();
-                    dto.course = student.getCourse();
-                    dto.specialtyId = student.getSpecialty().getId().toString();
-                    dto.group = student.getGroup();
-                    dto.status = student.getStatus().toString();
-                    dto.averageGrade = student.getAverageGrade();
-                    return dto;
-                }).toList();
-
-        List<StudentSubjectDTO> subjectDTOs = studentSubjects.stream()
-                .map(ss -> {
-                    StudentSubjectDTO dto = new StudentSubjectDTO();
-                    dto.studentId = ss.getStudent().getId().toString();
-                    dto.subjectId = ss.getSubject().getId().toString();
-                    dto.grade = (float) ss.getGrade();
-                    return dto;
-                }).toList();
-
-        boolean specialtiesSaved = JsonSerializeHelper.saveToFile(specialtyDTOs, specialtiesFilePath);
-        boolean studentsSaved = JsonSerializeHelper.saveToFile(studentDTOs, studentsFilePath);
-        boolean studentSubjectsSaved = JsonSerializeHelper.saveToFile(subjectDTOs, studentSubjectsFilePath);
-
-        if (specialtiesSaved && studentsSaved && studentSubjectsSaved) {
+        try {
+            Specialty.saveToFile(specialties, specialtiesFilePath);
+            Student.saveToFile(students, studentsFilePath);
+            List<StudentSubject> allStudentSubjects = students.stream()
+                    .flatMap(student -> student.getEnrolledSubjects().stream())
+                    .collect(Collectors.toList());
+            StudentSubject.saveToFile(allStudentSubjects, studentSubjectsFilePath);
             System.out.println("Успешно записани всички данни.");
-        } else {
-            System.out.println("Възникна проблем при записване на един или повече файлове.");
+        } catch (RuntimeException e) {
+            System.out.println("Възникна грешка при записването: " + e.getMessage());
         }
     }
     private static void saveAs() {
